--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,14 @@
 Home
 {% endblock %}
 {% block body %}
+<!-- Messenger Chat Plugin Code -->
+<div id="fb-root"></div>
+
+<!-- Your Chat Plugin code -->
+<div id="fb-customer-chat" class="fb-customerchat">
+</div>
+
+
 <h1 class="pt-0 title text-center pt-lg-5">
     <box-icon name="code-alt"></box-icon>Web Resources
 </h1>
@@ -82,4 +90,28 @@ Home
 
 </div>
 
+
+
+<script>
+
+    var chatbox = document.getElementById('fb-customer-chat');
+    chatbox.setAttribute("page_id", "100247375484205");
+    chatbox.setAttribute("attribution", "biz_inbox");
+
+
+    window.fbAsyncInit = function () {
+        FB.init({
+            xfbml: true,
+            version: 'v13.0'
+        });
+    };
+
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
 {% endblock %}
