--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 a{
   text-decoration: none!important;
   transition: all .6s ease-in-out;
 }
 
 body{
+  font-family: 'Open Sans', sans-serif;
   background-color: #f6fdfc!important;
 }
 main{
