--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,6 +1,5 @@
 .sidebar{
-    width: 300px;
-    background-color: white;
+    background-color: #000;
     height: 100vh;
     box-shadow: 0px 2px 15px rgb(0 0 0 / 6%);
     top: 0;
