--- a/src/index.css
+++ b/src/index.css
@@ -1,46 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-a{
-  text-decoration: none!important;
-  transition: all .6s ease-in-out;
+a {
+  text-decoration: none !important;
+  transition: all 0.6s ease-in-out;
 }
-html{
+html {
   font-size: 62.5%;
 }
 
-body{
-  font-family: 'Open Sans', sans-serif;
-  background-color: #18191A!important;
+body {
+  font-family: "Open Sans", sans-serif;
+  background-color: #18191a !important;
 }
-main{
+main {
   min-height: 80vh;
 }
 
-h3{
-  padding: .3rem;  
+h3 {
+  padding: 0.3rem;
 }
 
-.rating span{
+.rating span {
   margin: 0.1rem;
 }
-.box{
-  width: 400px;
+.box {
+  width: 100%;
+  max-width: 400px;
 }
-.card{
-  background-color: #18191a!important;
-  width: 400px;
-  border: none!important;
+.card {
+  background-color: #18191a !important;
+  width: 100%;
+  max-width: 100%;
+  border: none !important;
   box-shadow: 0px 2px 15px rgb(0 0 0 / 16%);
-
 }
-.bg-white{
+.bg-white {
   background-color: white;
 }
-.dark-bg{
+.dark-bg {
   color: white;
   background-color: #2c2c2c;
 }
@@ -61,10 +62,17 @@ h3{
   display: flex;
   overflow: hidden;
   background: #242526;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 25rem;
+  min-height: 200px;
   max-height: 41rem;
   transition: all 0.3s ease;
+}
+@media (max-width: 767px) {
+  .wrapper {
+    height: 18rem;
+    min-height: 160px;
+  }
 }
 
 .wrapper ul {
@@ -75,9 +83,10 @@ h3{
 }
 
 .wrapper ul a,
-.wrapper ul .drop-button
-{
+.wrapper ul .drop-button,
+.wrapper ul .resource-link {
   line-height: 55px;
+  min-height: 44px;
   position: relative;
   color: #b0b3b8;
   font-size: 18px;
@@ -89,19 +98,23 @@ h3{
   align-items: center;
   text-decoration: none;
 }
+@media (max-width: 767px) {
+  .wrapper ul a,
+  .wrapper ul .drop-button,
+  .wrapper ul .resource-link {
+    min-height: 48px;
+    line-height: 48px;
+    font-size: 16px;
+  }
+}
 
-.wrapper ul a:hover
-.wrapper ul .drop-button:hover
-{
-  background: #3A3B3C;
+.wrapper ul a:hover .wrapper ul .drop-button:hover {
+  background: #3a3b3c;
   color: #fff;
 }
 
-
-
 ul a .icon,
-ul .drop-button .icon
-{
+ul .drop-button .icon {
   height: 40px;
   width: 40px;
   margin-right: 13px;
@@ -112,15 +125,16 @@ ul .drop-button .icon
   border-radius: 50%;
 }
 
-ul a .icon span ,
-ul .drop-button .icon span
-{
+ul a .icon span,
+ul .drop-button .icon span,
+ul .resource-link .icon span {
   line-height: 40px;
   font-size: 20px;
   color: #b0b3b8;
 }
 
-ul a i , ul .drop-button i{
+ul a i,
+ul .drop-button i {
   position: absolute;
   right: 10px;
   font-size: 25px;
@@ -130,11 +144,24 @@ ul a i , ul .drop-button i{
 .wrapper ul.blog-drop,
 .wrapper ul.help-drop,
 .wrapper ul.learning-drop,
-.wrapper ul.drop-box
-{
-display: none;
+.wrapper ul.drop-box {
+  display: none;
 }
 
+.wrapper .sources-list {
+  list-style: none;
+  padding-left: 1.5rem;
+  margin-top: 0;
+}
+.wrapper .resource-item {
+  cursor: pointer;
+}
+.wrapper .resource-item i {
+  position: absolute;
+  right: 10px;
+  font-size: 25px;
+  pointer-events: none;
+}
 
 /* Go back icon on detail box*/
 .wrapper .arrow {
@@ -149,20 +176,16 @@ display: none;
   margin-right: 15px;
 }
 
-
-::-webkit-scrollbar-track
-{
+::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
   background-color: #222222;
 }
 
-::-webkit-scrollbar
-{
+::-webkit-scrollbar {
   width: 12px;
 }
 
-::-webkit-scrollbar-thumb
-{
+::-webkit-scrollbar-thumb {
   background-color: #454545;
   border-radius: 20px;
 }
